--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <span class="headin-primary-main">OutDoors</span>
                 <span class="headin-primary-sub">is where life happens</span>
             </h1>
+
+            <a href="" class="btn btn-white">Discover our tours</a>
         </div>
 
        
